# DATASCII_10_ADHD

./: .dockerignore  .gitignore  ATTENTION_EXTRACTION_README.md  CLASS_WEIGHTS_AND_VERSION_JUSTIFICATION.md  CLEANUP_LOG.txt  CLEANUP_SUMMARY.md  DUPLICATE_PREVENTION_GUIDE.md  Dockerfile  EMPIRICAL_RESULTS_DETAILED.csv  EMPIRICAL_VERIFICATION_SUMMARY.md  EXPERIMENTAL_SETUP_DOCUMENTATION.md  FUSION_AND_CLASSIFICATION_DOCUMENTATION.md  GNN_BRANCH_DOCUMENTATION.md  GPU_SETUP.md  MODEL_VERSIONS_EXPLAINED.md  MULTI_SITE_SETUP_GUIDE.md  MULTI_SITE_UPDATE.txt  PREPROCESSING_PIPELINE_DOCUMENTATION.md  README.md  ROI_AND_FEATURE_EXTRACTION_DOCUMENTATION.md  ROI_RANKING_AND_SITE_SELECTION.md  STAN_BRANCH_DOCUMENTATION.md  STATISTICAL_OUTPUTS_EXPLAINED.md  TASK_COMPLETION_REPORT.md  THESIS_TOOLS_README.md  THESIS_VISUALIZATION_REAL_DATA.md  TRAINING_TESTING_DATA_PROVENANCE.md  adhd_preprocessing_pipeline.py  check_distribution.py  check_v9_distribution.py  docker-compose.yml  extract_attention_weights.py  extract_predictions_to_csv.py  extract_table_data.py  gnn_stan_module.py  input_module.py  main.py  parcellation_and_feature_extraction.py  pyproject.toml  reprocess_corrupted.py  (+11 more)
configs/: README.md  __init__.py  baseline_accurate_config.py  baseline_accurate_v6_config.py  baseline_accurate_v7_config.py  baseline_accurate_v8_config.py  baseline_accurate_v9_config.py  efficient_config.py
debug/: README.md  archive_check_preprocessing.py  archive_check_washu_structure.py  archive_debug_washu_filter.py  archive_update_metadata_washu.py  washu_diagnostics.py
evaluation/: __init__.py  (+2 more)
(+93 files in other folders)
