[project]
name = "adhd-gnn-stan"
version = "0.1.0"
description = "ADHD Classification using GNN-STAN Hybrid Architecture"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    # Neuroimaging libraries
    "nibabel>=5.0.0",
    "nilearn>=0.10.0",
    
    # Scientific computing
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0,<2.0.0",
    
    # Data processing
    "pandas>=2.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    
    # System monitoring
    "psutil>=5.9.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    
    # Utilities
    "requests>=2.28.0",
    "lxml>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "preprocessing/",
    "feature_extraction/",
    "models/",
    "training/",
    "utils/", 
    "optimization/",
    "atlas/"
]

[tool.ruff]
target-version = "py310"
line-length = 88

# Note: PyTorch installed separately to avoid compatibility issues
# Install commands:
# uv sync
# uv add torch==2.1.0 torchvision==0.16.0 torchaudio==2.1.0 --index https://download.pytorch.org/whl/cu121